--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <script src="libs/mootools-yui-compressed.js"></script>
 <script src="libs/mootools-core-1.4.5-server.js"></script>
 
+
+test
 </body>
 </html>
